clean up codebase & IFluidHandler support